@@ -78,6 +78,7 @@ const TEXTDESCR_FILEAREA = 'itemarea';
 
 const M_FILEAREA_SUBMISSIONS='submission';
 const M_FILEAREA_TOPICMEDIA='topicmedia';
+const M_FILEAREA_MODELMEDIA='modelmedia';
 
 const AUDIOPROMPT_FILEAREA = 'audioitem';
 const AUDIOANSWER_FILEAREA = 'audioanswer';
