@@ -1,6 +1,7 @@
 1.0.17 (xxxx)
 - fixed issue in get_course_moduleinfo that could kill backup and restore
 - tweaked polly stuff
+- added modelmedia to back up and restore
 
 1.0.16 (Build 2022021400)
 - added suggested grammar corrections
